--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="header__title">
+        <%= link_to "MyTodo", root_path , class: "header__title--text" %>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
