--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,13 +1,3 @@
-<%= link_to '新規タスク追加', new_task_path %>
-
-<% @tasks.each do |task| %>
-  <div class = "task">
-    <div class = "task-content">
-      <%= link_to task.content, task_path(task.id) %>
-    </div>
-    <%# デッドラインに変えたい %>
-    <div class = "task-date">
-      投稿日時: <%= task.created_at%>
-    </div>
-  </div>
-<% end %>
+<%= render partial: "left_bar" %>
+<%= render partial: "main_bar" %>
+<%= render partial: "right_bar" %>
