--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,21 +1,25 @@
+.header {
+  height: calc(100% - 90%);
+  width: 100%;
+  padding: 0 10px;
+  background-color: #3399FF;
+  color: #ffffff;
+  display: flex;
+  &__title {
+    font-size: 30px;
+    font-weight: bold;
+    &--text {
+      text-decoration: none;
+      color: #ffffff;
+    }
+  }
+}
 .task {
   border: 1px solid;
-  width: 97%;
-  height: 46px;
-  margin: 10px 10px;
-  position: relative;
-  &_delate_btn {
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    font-size: 20px;
-  }
-  &_content {
-    padding-left: 40px;
-  }
-  &_date {
-    color: gray;
-    font-size: 13px;
-    padding-left: 40px;
-  }
+  width: 40%;
+  margin-top: 30px;
+}
+
+.task-date {
+  color: gray;
 }
