--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <div class = "taskContent">
   <%= @task.content%>
 </div>
+<%# 締め切り期日に変更したい %>
 <div class = "postDate">
   <%= @task.created_at %>
 </div>
