--- a/app/assets/stylesheets/modules/_left_bar.scss
+++ b/app/assets/stylesheets/modules/_left_bar.scss
@@ -28,18 +28,21 @@
         font-size: 13px;
         color: #555555;
         text-align: left;
+        font-weight:normal;
       }
       &-count {
         font-size: 13px;
         color: #555555;
         padding-left: 22px;
         text-align: left;
+        font-weight:normal;
       }
       &-rate {
         font-size: 13px;
         color: #555555;
         padding-left: 13px;
         text-align: right;
+        font-weight:normal;
       }
       .icon01 {
         color: #FF3333;
