--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,9 @@
 <div class= "content__title">
   タスクの編集
 </div>
-<%= form_with model: @task, class: :form, local: true do |form| %>
-  <%= form.text_field :content, placeholder: :タスク, class: :form__content %>
-  <%= form.submit '更新', class: :form__btn %>
+<%= form_with model: [@task], class: :form, local: true do |f| %>
+  <%= f.text_field :content, placeholder: :タスク, class: :form__content %>
+  <%= f.select :priority, {未設定: "未設定",重要・緊急: "重要・緊急",重要・緊急ではない: "重要・緊急ではない",重要ではない・緊急: "重要ではない・緊急",重要ではない・緊急ではない: "重要ではない・緊急ではない"}, class: :form__priority %>
+  <%= f.date_field :deadline, class: :form__deadline %>
+  <%= f.submit '更新', class: :form__btn %>
 <% end %>
