--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,3 @@
 <%= render partial: "left_bar" %>
 <%= render partial: "main_bar" %>
-<%= render partial: "right_bar" %>
+<%# <%= render partial: "right_bar" %>
