--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -4,18 +4,25 @@
   height: 46px;
   margin: 10px 10px;
   position: relative;
-  &_delate_btn {
-    position: absolute;
-    left: 5px;
-    top: 5px;
-    font-size: 20px;
-  }
-  &_content {
-    padding-left: 40px;
-  }
-  &_date {
-    color: gray;
-    font-size: 13px;
-    padding-left: 40px;
-  }
+    &_delate_btn {
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      font-size: 20px;
+    }
+    &_content {
+      padding-left: 40px;
+    }
+    &_deadline {
+      color: gray;
+      font-size: 13px;
+      padding-left: 40px;
+    }
+    &_priority {
+      color: gray;
+      font-size: 13px;
+      position: absolute;
+      right: 5px;
+      top: 10px;
+    }
 }
