--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -5,7 +5,10 @@
   <div class = "task_content">
     <%= link_to task.content, task %>
   </div>
-  <div class = "task_date">
-    投稿日時: <%= task.created_at %>
+  <div class = "task_deadline">
+    期限: <%= task.deadline %>
+  </div>
+  <div class = "task_priority">
+    <%= task.priority %>
   </div>
 </div>
