--- a/app/views/tasks/_left_bar.html.erb
+++ b/app/views/tasks/_left_bar.html.erb
@@ -7,7 +7,7 @@
   <table class= "priority">
     <tr class= "priority__list">
       <th class= "priority__list-star">
-        <i class="fas fa-star icon01">
+        <i class="fa fa-star icon01" aria-hidden="true">
       </th>
       <th class= "priority__list-name">
         重要・緊急
@@ -21,7 +21,7 @@
     </tr>
     <tr class= "priority__list">
       <th class= "priority__list-star">
-        <i class="fas fa-star icon02">
+        <i class="fa fa-star icon02" aria-hidden="true">
       </th>
       <th class= "priority__list-name">
         重要・緊急ではない
@@ -35,7 +35,7 @@
     </tr>
     <tr class= "priority__list">
       <th class= "priority__list-star">
-        <i class="fas fa-star icon03">
+        <i class="fa fa-star icon03" aria-hidden="true">
       </th>
       <th class= "priority__list-name">
         重要ではない・緊急
@@ -49,7 +49,7 @@
     </tr>
     <tr class= "priority__list">
       <th class= "priority__list-star">
-        <i class="fas fa-star icon04">
+        <i class="fa fa-star icon04" aria-hidden="true">
       </th>
       <th class= "priority__list-name">
         重要ではない・緊急ではない
@@ -62,7 +62,7 @@
     </th>
     <tr class= "priority__list">
       <th class= "priority__list-star">
-        <i class="fas fa-star icon05">
+        <i class="fa fa-star-o icon05" aria-hidden="true">
       </th>
       <th class= "priority__list-name">
         未設定
