--- a/app/views/tasks/_main_bar.html.erb
+++ b/app/views/tasks/_main_bar.html.erb
@@ -4,10 +4,12 @@
       <i class= "fas fa-sort-amount-down icon-sort"></i>
     </div>
   </div>
-<%= form_with model: @task, local: true do |form| %>
+<%= form_with model: @task, class: 'task_form', local: true do |form| %>
   <%= form.text_field :content , class: 'add_task_box', placeholder: '+ タスク追加'%>
 <% end %>
-<% @tasks.each do |task| %>
-  <%= render partial: "task", locals: { task: task} %>
-<% end %>
+<ul class = "task_list">
+  <% @tasks.each do |task| %>
+    <%= render partial: "task", class: 'task_list', locals: { task: task} %>
+  <% end %>
+</ul>
 </div>
