--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
-<div class = "task">
-  <div class = "task_delate_btn">
+<li class = "task">
+  <div class = "task_delete_btn">
     ○
   </div>
   <div class = "task_content">
@@ -11,4 +11,4 @@
   <div class = "task_priority">
     <%= task.priority %>
   </div>
-</div>
+</li>
