--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -4,7 +4,7 @@
   height: 46px;
   margin: 10px 10px;
   position: relative;
-    &_delate_btn {
+    &_delete_btn {
       position: absolute;
       left: 5px;
       top: 5px;
