--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -9,6 +9,32 @@
       left: 5px;
       top: 5px;
       font-size: 20px;
+      cursor: pointer;
+      display: inline-block;
+    }
+    .description {
+      display: none;
+      position: absolute;
+      padding: 10px;
+      font-size: 10px;
+      line-height: 1.6em;
+      color: #fff;
+      background: gray;
+      width: 70px;
+    }
+    .description:before {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 55%;
+      border: 10px solid transparent;
+      border-top: 10px solid gray;
+      margin-left: -15px;
+    }
+    &_delete_btn:hover .description{
+      display: inline-block;
+      top: -43px;
+      left: -23px;
     }
     &_content {
       padding-left: 40px;
