--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,6 +1,7 @@
 <li class = "task">
   <div class = "task_delete_btn">
     <%= link_to '○' , task_path(task.id), method: :delete, remote: true %>
+    <div class = "description">タスク削除</div>
   </div>
   <div class = "task_content">
     <%= link_to task.content, task%>
