--- a/app/assets/stylesheets/modules/_left_bar.scss
+++ b/app/assets/stylesheets/modules/_left_bar.scss
@@ -1,12 +1,11 @@
 .left-bar {
   width: calc(100% - 79%);
   height: 100vh;
-  border-right: 1px solid #DDDDDD;
   float: left;
   .header {
     height: calc(100% - 93%);
-    margin: 0 10px;
-    border-bottom: 0.5px solid #DDDDDD;
+    padding-left: 10px;
+    background-color: #253141;
     display: flex;
     justify-content: space-between;
     line-height: 55px;
@@ -14,10 +13,15 @@
       font-size: 16px;
       font-weight: bold;
       padding-left: 10px;
+      color: #eeeeee;
     }
   }
+  .main {
+    height: calc(100% - 7%);
+    background-color: #2f3e51;
+    padding-top: 15px;
+  }
   .priority {
-    margin-top: 15px;
     margin-left: 5px;
     &__list {
       margin: 30px 40px;
@@ -26,20 +30,20 @@
       }
       &-name {
         font-size: 13px;
-        color: #555555;
+        color: #eeeeee;
         text-align: left;
         font-weight:normal;
       }
       &-count {
         font-size: 13px;
-        color: #555555;
+        color: #eeeeee;
         padding-left: 22px;
         text-align: left;
         font-weight:normal;
       }
       &-rate {
         font-size: 13px;
-        color: #555555;
+        color: #eeeeee;
         padding-left: 13px;
         text-align: right;
         font-weight:normal;
