--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,7 +2,7 @@
   border: 1px solid;
   width: 97%;
   height: 46px;
-  margin: 10px 10px;
+  margin: 10px 18px;
   position: relative;
     &_delete_btn {
       position: absolute;
@@ -38,6 +38,7 @@
     }
     &_content {
       padding-left: 40px;
+      font-weight: 600;
     }
     &_deadline {
       color: gray;
@@ -53,6 +54,6 @@
     }
 }
 a {
+  color: #222222;
   text-decoration: none;
-  color: #000;
 }
