--- a/app/views/tasks/_left_bar.html.erb
+++ b/app/views/tasks/_left_bar.html.erb
@@ -4,76 +4,78 @@
       test
     </div>
   </div>
-  <table class= "priority">
-    <tr class= "priority__list">
-      <th class= "priority__list-star">
-        <i class="fa fa-star icon01" aria-hidden="true">
-      </th>
-      <th class= "priority__list-name">
-        重要・緊急
-      </th>
-      <th class= "priority__list-count">
-        <%= @counts["重要・緊急"] %>
-      </th>
-      <th class= "priority__list-rate">
-        <%= number_to_percentage @counts["重要・緊急"].to_f / @tasks.length.to_f * 100, precision: 0 %>
-      </th>
-    </tr>
-    <tr class= "priority__list">
-      <th class= "priority__list-star">
-        <i class="fa fa-star icon02" aria-hidden="true">
-      </th>
-      <th class= "priority__list-name">
-        重要・緊急ではない
-      </th>
-      <th class= "priority__list-count">
-        <%= @counts["重要・緊急ではない"] %>
-      </th>
-      <th class= "priority__list-rate">
-        <%= number_to_percentage @counts["重要・緊急ではない"].to_f / @tasks.length.to_f * 100, precision: 0 %>
-      </th>
-    </tr>
-    <tr class= "priority__list">
-      <th class= "priority__list-star">
-        <i class="fa fa-star icon03" aria-hidden="true">
-      </th>
-      <th class= "priority__list-name">
-        重要ではない・緊急
-      </th>
-      <th class= "priority__list-count">
-        <%= @counts["重要ではない・緊急"] %>
-      </th>
-      <th class= "priority__list-rate">
-        <%= number_to_percentage @counts["重要ではない・緊急"].to_f / @tasks.length.to_f * 100, precision: 0 %>
-      </th>
-    </tr>
-    <tr class= "priority__list">
-      <th class= "priority__list-star">
-        <i class="fa fa-star icon04" aria-hidden="true">
-      </th>
-      <th class= "priority__list-name">
-        重要ではない・緊急ではない
-      </th>
-      <th class= "priority__list-count">
-        <%= @counts["重要ではない・緊急ではない"] %>
-      </th>
-      <th class= "priority__list-rate">
-        <%= number_to_percentage @counts["重要ではない・緊急ではない"].to_f / @tasks.length.to_f * 100, precision: 0 %>
-      </th>
-    </tr>
-    <tr class= "priority__list">
-      <th class= "priority__list-star">
-        <i class="fa fa-star-o icon05" aria-hidden="true">
-      </th>
-      <th class= "priority__list-name">
-        未設定
-      </th>
-      <th class= "priority__list-count">
-        <%= @counts["未設定"] %>
-      </th>
-      <th class= "priority__list-rate">
-        <%= number_to_percentage @counts["未設定"].to_f / @tasks.length.to_f * 100, precision: 0 %>
-      </th>
-    </tr>
-  </table>
+  <div class = "main">
+    <table class= "priority">
+      <tr class= "priority__list">
+        <th class= "priority__list-star">
+          <i class="fa fa-star icon01" aria-hidden="true">
+        </th>
+        <th class= "priority__list-name">
+          重要・緊急
+        </th>
+        <th class= "priority__list-count">
+          <%= @counts["重要・緊急"] %>
+        </th>
+        <th class= "priority__list-rate">
+          <%= number_to_percentage @counts["重要・緊急"].to_f / @tasks.length.to_f * 100, precision: 0 %>
+        </th>
+      </tr>
+      <tr class= "priority__list">
+        <th class= "priority__list-star">
+          <i class="fa fa-star icon02" aria-hidden="true">
+        </th>
+        <th class= "priority__list-name">
+          重要・緊急ではない
+        </th>
+        <th class= "priority__list-count">
+          <%= @counts["重要・緊急ではない"] %>
+        </th>
+        <th class= "priority__list-rate">
+          <%= number_to_percentage @counts["重要・緊急ではない"].to_f / @tasks.length.to_f * 100, precision: 0 %>
+        </th>
+      </tr>
+      <tr class= "priority__list">
+        <th class= "priority__list-star">
+          <i class="fa fa-star icon03" aria-hidden="true">
+        </th>
+        <th class= "priority__list-name">
+          重要ではない・緊急
+        </th>
+        <th class= "priority__list-count">
+          <%= @counts["重要ではない・緊急"] %>
+        </th>
+        <th class= "priority__list-rate">
+          <%= number_to_percentage @counts["重要ではない・緊急"].to_f / @tasks.length.to_f * 100, precision: 0 %>
+        </th>
+      </tr>
+      <tr class= "priority__list">
+        <th class= "priority__list-star">
+          <i class="fa fa-star icon04" aria-hidden="true">
+        </th>
+        <th class= "priority__list-name">
+          重要ではない・緊急ではない
+        </th>
+        <th class= "priority__list-count">
+          <%= @counts["重要ではない・緊急ではない"] %>
+        </th>
+        <th class= "priority__list-rate">
+          <%= number_to_percentage @counts["重要ではない・緊急ではない"].to_f / @tasks.length.to_f * 100, precision: 0 %>
+        </th>
+      </tr>
+      <tr class= "priority__list">
+        <th class= "priority__list-star">
+          <i class="fa fa-star-o icon05" aria-hidden="true">
+        </th>
+        <th class= "priority__list-name">
+          未設定
+        </th>
+        <th class= "priority__list-count">
+          <%= @counts["未設定"] %>
+        </th>
+        <th class= "priority__list-rate">
+          <%= number_to_percentage @counts["未設定"].to_f / @tasks.length.to_f * 100, precision: 0 %>
+        </th>
+      </tr>
+    </table>
+  </div>
 </div>
