--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -10,6 +10,6 @@
     期限: <%= task.deadline %>
   </div>
   <div class = "task_priority">
-    <%= task.priority %>
+    <%= link_to task.priority , edit_task_path(task.id) %>
   </div>
 </li>
