--- a/app/assets/stylesheets/modules/_left_bar.scss
+++ b/app/assets/stylesheets/modules/_left_bar.scss
@@ -5,20 +5,21 @@
   .header {
     height: calc(100% - 93%);
     padding-left: 10px;
-    background-color: #253141;
+    background-color: #cccccc;
     display: flex;
     justify-content: space-between;
     line-height: 55px;
+    border-bottom: 0.5px solid #f5f5f5;
     &__user-name {
       font-size: 16px;
       font-weight: bold;
       padding-left: 10px;
-      color: #eeeeee;
+      color: #333333;
     }
   }
   .main {
     height: calc(100% - 7%);
-    background-color: #2f3e51;
+    background-color: #cccccc;
     padding-top: 15px;
   }
   .priority {
@@ -30,20 +31,20 @@
       }
       &-name {
         font-size: 13px;
-        color: #eeeeee;
+        color: #333333;
         text-align: left;
         font-weight:normal;
       }
       &-count {
         font-size: 13px;
-        color: #eeeeee;
+        color: #333333;
         padding-left: 22px;
         text-align: left;
         font-weight:normal;
       }
       &-rate {
         font-size: 13px;
-        color: #eeeeee;
+        color: #333333;
         padding-left: 13px;
         text-align: right;
         font-weight:normal;
