--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -101,6 +101,13 @@ img {
   background-color: #38aef0;
 }
 
+.GuestButton {
+  margin-top: 20px;
+  background-color: #00CC99;
+  color: #f5f5f5;
+  font-weight: 600;
+}
+
 #error_explanation {
   margin: 20px 0;
   padding: 20px 30px;
