--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -11,12 +11,12 @@
         .FormField__label--normal
           = f.label :name
         .FormField__input--normal
-          = f.text_field :name, autofocus: true
+          = f.text_field :name, autocomplete: "off"
       .FormField
         .FormField__label--normal
           = f.label :email
         .FormField__input--normal
-          = f.email_field :email
+          = f.email_field :email, autocomplete: "off"
       .FormField
         .FormField__label--normal
           = f.label :password
