--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -12,7 +12,8 @@
     margin-left: 300px;
     margin-right: 300px;
     align-items: center;
-    background-image: url("/assets/photob.jpeg");
+    background-image: image-url("/assets/photob.jpeg");
+    background-size: cover;
     background-color:rgba(255,255,255,0.3);
     background-blend-mode:lighten;
     position: relative;
