--- a/app/assets/stylesheets/modules/_main_bar.scss
+++ b/app/assets/stylesheets/modules/_main_bar.scss
@@ -9,7 +9,8 @@
   &__body {
     height: calc(100% - 19%);
     overflow: scroll;
-    background-image:url("/assets/photoc.jpeg");
+    background-image:image-url("/assets/photoc.jpeg");
+    background-size: cover;
     background-color:rgba(255,255,255,0.3);
     background-blend-mode:lighten;
     padding-top: 22px;
