--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 .AccountPage
-  %img{src: "/assets/photoa.jpeg", style: "opacity:0.2"} 
+  %img{src: "/images/photoa.jpeg", style: "opacity:0.2"} 
   .AccountPage__title
     %h2 Create Account
     %h5 新規アカウントの作成
