--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,5 @@
 .AccountPage
-  %img{src: "/assets/photod.jpeg", style: "opacity:0.2"}
+  %img{src: "/images/photod.jpeg", style: "opacity:0.2"}
   .AccountPage__title
     %h2 Edit Account
     %h5 アカウントの編集
