--- a/app/views/tasks/_main_bar.html.haml
+++ b/app/views/tasks/_main_bar.html.haml
@@ -3,7 +3,7 @@
   .main__bar__body
     %ul.task__list
       - @tasks.each do |task|
-        = render partial: "task", class: 'task__list', locals: { task: task}
+        = render partial: "task", class: 'task__list', locals: { task: task }
   .main__bar__hooter
-    = form_for [@task] ,class: 'task_form', local: true do |f|
+    = form_for [@task] ,class: 'task_form', remote: true do |f|
       = f.text_field :content , class: 'add__task', placeholder: '+ タスク追加', autocomplete: "off"
